fix collapse button formatting

--- a/client/src/components/Overview/overview.css
+++ b/client/src/components/Overview/overview.css
@@ -200,29 +200,29 @@ hr {
 }
 
 .overview-collapse-gallery {
-  grid-column: 2 / -1;
+  grid-column: 4 / -1;
   grid-row: 1 / 2;
+  width: 40px;
+  height: 30px;
   z-index: 3;
   right: 0px;
   text-align: right;
   align-content: right;
   padding-top: 15px;
   padding-right: 15px;
+  cursor: default;
 }
 
 .overview-collapse-icon {
   width: 20px;
   height: 20px;
   z-index: 4;
-  opacity: 0.7;
 }
 
 .overview-collapse-icon:hover {
   width: 30px;
   height: 30px;
   z-index: 4;
-  opacity: 1;
-  cursor: default;
 }
 
 
